fix: [CDNG-7717, CDNG-7706, CDNG-7704]: overlapping issue of repoName fixed and label changed selected connector and connectors  fixed (#2971)
* fix: CDNG-7717 overlapping issue of reponame fixed

* fix: CDNG-7706 label issue fixed

* fix: CDNG-7704 label issue fixed

--- a/src/modules/70-pipeline/components/ManifestSelection/ManifestWizardSteps/ManifestWizardSteps.module.scss
+++ b/src/modules/70-pipeline/components/ManifestSelection/ManifestWizardSteps/ManifestWizardSteps.module.scss
@@ -146,6 +146,11 @@
   margin-bottom: 0 !important;
   width: 370px;
 }
+.repo-name-url {
+  margin-bottom: var(--spacing-medium);
+  width: 370px;
+  word-break: break-all;
+}
 
 .alignSelf {
   align-self: center;
